--- a/My_Education.html
+++ b/My_Education.html
@@ -13,6 +13,228 @@
             <p>automation engineer</p>
         </div>
     <!-- header end -->
+    <!-- main start -->
+    <main>
+      <h2>My Education</h2>
+      <!-- Higher and secondary education start -->
+      <div class="section">
+        <h3>Higher and secondary education</h3>
 
+      </div>
+      <!-- Higher and secondary education end -->
+      <!-- Digital Industry Academy start -->
+      <div class="section">
+        <h3>Digital Industry Academy</h3>
+        <table>
+          <caption>SIEMENS</caption>
+          <tr>
+            <th>course name</th>
+            <th>content</th>
+            <th>certificate</th>
+          </tr>
+          <tr>
+            <td>MD Qualifying - Industrial Sectors and Applications</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Basics of Drives - Motors</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>SIMARIS configuration</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>3TM Vacuum Contactors</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>PROFINET</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Power Monitoring with SENTRON</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Data communication with Industrial Ethernet</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>SIMATIC TIA Portal Structured Programming</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>3VA molded case circuit breaker</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Process control engineering for beginner</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>PLCs for beginners</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Basics of Drives - Converters</td>
+            <td></td>
+            <td></td>
+          </tr>
+        </table>
+        <table>
+          <caption>Allen Bradley</caption>
+          <tr>
+            <th>course name</th>
+            <th>content</th>
+            <th>certificate</th>
+          </tr>
+          <tr>
+            <td>CCP146 Studio 5000 Logix Designer Level 1: ControlLogix Logix 5000 System Fundamentals</td>
+            <td>
+              <ul>
+                <li>Locating and Identifying Logix 5000 System Components</li>
+                <li>Locating and Configuring Studio 5000 Logix Designer Application Components</li>
+                <li>Creating and Modifying a Studio 5000 Logix Designer Project</li>
+                <li>Identifying and Connecting to Industrial Networks in a Logix 5000 System</li>
+                <li>Downloading, Uploading, and Going Online to a Logix 5000 Controller</li>
+                <li>Identifying I/O Tags and Devices in a Logix 5000 System</li>
+                <li>Configuring Modules in a Studio 5000 Logix Designer Project</li>
+                <li>Creating Tags and Monitoring Data in a Studio 5000 Logix Designer Project</li>
+                <li>Drafting Basic Ladder Logic for a Studio 5000 Logix Designer Routine</li>
+              </ul>
+            </td>
+            <td>
+              <p><a target="_blank" href="sert/Allen bradley/CertificatePdfServlet.pdf"><button>Sertificat</a></p>
+              <p><a href="sert/Allen bradley/CertificatePdfServlet.pdf" download><button>Dowload</a></p>
+            </td>
+          </tr>
+          <tr>
+            <td>CCP151 Studio 5000 Logix Designer Level 2: Basic Ladder Logic Programming</td>
+            <td>
+              <ul>
+                <li>Programming Comparison Instructions in a Studio 5000 Logix Designer Project</li>
+                <li>Programming Move Instructions in a Studio 5000 Logix Designer Project</li>
+                <li>Documenting and Searching Ladder Logic Using the Studio 5000 Logix Designer Application</li>
+                <li>Copying and Filling an Array in a Studio 5000 Logix Designer Project</li>
+                <li>Starting a Ladder Diagram for a Studio 5000 Logix Designer Project</li>
+                <li>Handling Expressions in a Studio 5000 Logix Designer Project</li>
+                <li>Programming a Procedure in a Studio 5000 Logix Designer Project</li>
+                <li>Separating the Procedure from Equipment Control in a Studio 5000 Logix Designer Project</li>
+              </ul>
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>CCP143 Studio 5000 Logix Designer Level 3: Project Development</td>
+            <td>
+              <ul>
+                <li>Configuring Logix 5000 System I/O  Modules</li>
+                <li>Configuring Logix 5000 System Communications  over an EtherNet/IP Network</li>
+                <li>Organizing Arrays in a Studio 5000 Logix Designer Project</li>
+                <li>Creating a User‐Defined Data Type in a Studio 5000 Logix Designer Project</li>
+                <li>Configuring Additional Tag Functionality in a Studio 5000 Logix Designer Project</li>
+                <li>Developing an Add-On Instruction in a Ladder Diagram</li>
+                <li>Managing Studio 5000 Logix Designer Project Files and Components</li>
+                <li>Studio 5000 Logix Designer Ladder Logic Tips and Tricks</li>
+                <li>Retrieving and Setting Controller Status Values with GSV and SSV Instructions</li>
+                <li>Configuring a Logix 5000 Controller to Produce and Consume Data</li>
+                <li>Configuring a Logix 5000 Message</li>
+                <li>Allocating Connections and Updating Firmware in a Logix 5000 System</li>
+                <li>Identifying and Correcting Faults in a Logix 5000 System</li>
+              </ul>
+            </td>
+            <td></td>
+          </tr>
+        </table>
+        <table>
+          <caption>ABB</caption>
+          <tr>
+            <th>course name</th>
+            <th>content</th>
+            <th>certificate</th>
+          </tr>
+          <tr>
+            <td>ACS880-01 Learning Program_CQP</td>
+            <td>
+              <ul>
+                <li>AC drives general installation practices</li>
+                <li>All-compatible industrial drives, acs880 series offering</li>
+                <li>All-compatible panel fundamentals</li>
+                <li>Drive composer entry fundamentals</li>
+                <li>ACS880-01/11/31 installation and startup</li>
+                <li>ACS880-01/11/31 industrial drive technical details</li>
+              </ul>
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>F115E Softstarters Made Easy</td>
+            <td>
+              <ul>
+                <li>The principle of operation and application of softstarters</li>
+                <li>Identify softstarters key advantages over other starting methods</li>
+                <li>Connection and commissioning</li>
+                <li>Diagnostics and elimination of errors and malfunctions</li>
+              </ul>
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+
+
+        </table>
+        <!-- <ul>
+            <li>SIEMENS
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </li>
+            <li>Allen-Bradley
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </li>
+            <li>ABB
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </li>
+        </ul> -->
+      </div>
+      <!-- Digital Industry Academy end -->
+    </main>
+    <!-- main end -->
+    <!-- copyright start -->
+    <div class="copyright">
+        &copy; 2022 My Blog. All rights reserved.
+    </div>
+    <!-- copyright end -->
   </body>
 </html>
