--- a/My_Main_Skills.html
+++ b/My_Main_Skills.html
@@ -13,5 +13,61 @@
             <p>automation engineer</p>
         </div>
     <!-- header end -->
+    <!--main start-->
+    <main>
+      <h2>My Main Skills</h2>
+      <!--Drilling Control Systems and Rig Automation start-->
+      <div class="section">
+          <h3><span>Drilling Control Systems and Rig Automation</span></h3>
+          <p>Designed to control the electric drives of the main (mud pumps, winch and rotor) and auxiliary mechanisms of the drilling rig in manual or semi-automatic mode, developed on the basis of a microprocessor programmable controller and performs the following functions:</p>
+          <ul>
+            <li>input, control and primary processing of input signals;</li>
+            <li>control of the output of parameter values ​​beyond the permissible technological boundaries, the serviceability of sensors and communication lines;</li>
+            <li>collection, processing and visualization of information about the state of equipment, sensors and communication lines;</li>
+            <li>control of the mechanisms of the drilling rig in accordance with the required modes;</li>
+            <li>reception and control of the reliability of information of manual input;</li>
+            <li>formation and issuance of control actions and messages about failures and deviations of parameters;</li>
+            <li>calculation of operating time of the main equipment;</li>
+          </ul>
+      </div>
+      <!--Drilling Control Systems and Rig Automation end-->
+      <!--Frequency converters start-->
+      <div class="section">
+        <h3><span>Frequency converters</span></h3>
+        <p>Electrical equipment for frequency regulation of alternating voltage. The main scope of these devices is changing the speed and torque of asynchronous electrical machines. The principle of operation of control and regulation is based on the dependence of the speed of rotation of the magnetic field on the frequency of the supply voltage. Asynchronous electric motors are widely used as drives for industrial equipment, pumping units, control valves and other devices. The main disadvantage of these electric machines is the constant speed of rotation, high starting currents. With the help of frequency converters, it is possible to eliminate these shortcomings and significantly expand the scope of AC motors.</p>
+        <p>My frequency drive maintenance responsibilities include:</p>
+        <ul>
+          <li>Hardware selection using the Sizer configurator;</li>
+          <li>Creating a project, configuration wizard, maintaining its performance;</li>
+          <li>Commissioning of converters Siemens S120, ABB ACS 880;</li>
+          <li>Parameterization and commissioning of standard functions of converters of the S120, ACS 880 series (acceleration, braking, regulation);</li>
+          <li>Setting and optimization of current and speed control loops;</li>
+          <li>Communication via PROFINET bus between G120 and S7-300/S7-1200 controller;</li>
+          <li>Error diagnosis and troubleshooting;</li>
+        </ul>
+      </div>
+      <!--Frequency converters end-->
+      <!--Programmable logic controllers start-->
+      <div class="section">
+        <h3><span>Programmable logic controllers</span></h3>
+        <p>An important element of the automation system in an industrial enterprise. PLCs are necessary for automatic control of an object in real time. External modules are connected to the PLC input-output channels, which allow collecting and analyzing data, and controlling the operation of the drilling rig.</p>
+        <p>My PLC maintenance responsibilities include:</p>
+        <ul>
+          <li>Select controller equipment according to the requirements of the task;</li>
+          <li>Configuring and connecting controller modules;</li>
+          <li>Making changes to the controller program online and offline;</li>
+          <li>Configure interfaces for connecting the controller to the programming environment;</li>
+          <li>Select and configure expansion modules;</li>
+          <li>Error diagnosis and troubleshooting;</li>
+        </ul>
+      </div>
+      <!--Programmable logic controllers end-->
+    </main>
+    <!--main end-->
+    <!--copyright start-->
+    <div class="copyright">
+        &copy; 2022 My Blog. All rights reserved.
+    </div>
+    <!--copyright end-->
   </body>
 </html>
