--- a/index.html
+++ b/index.html
@@ -23,29 +23,32 @@
     <!-- About Me section end -->
     <!-- My Main Skills section start -->
         <div class="section">
-            <h1><span><a href="My_Main_Skills.html">My Main Skills</a></span></h1>
+            <h2><span><a href="My_Main_Skills.html">My Main Skills</a></span></h2>
               <ul>
                 <li>Drilling Control Systems and Rig Automation</li>
-                <li>Frequency converters and programmable logic controllers </li>
-                <li>Schematic diagrams of automated control systems </li>
+                <li>Frequency converters</li>
+                <li>Programmable logic controllers</li>
+                <li>Schematic diagrams of automated control systems</li>
               </ul>
       </div>
     <!-- My Main Skills section end -->
     <!-- My Education section start -->
         <div class="section">
-            <h1><span><a href="My_Education.html">My Education</a></span></h1>
-              <ul>
-                <li><strong>Higher and secondary education</strong></li>
+            <h2><span><a href="My_Education.html">My Education</a></span></h2>
+                <ul>
+                  <li><strong>Higher and secondary education</strong>
                   <ul>
                     <li>Ural Federal University</li>
                     <li>Krasnoufimsk Agrarian College</li>
                   </ul>
-                <li><strong>Digital Industry Academy</strong></li>
+                </li>
+                  <li><strong>Digital Industry Academy</strong>
                   <ul>
                     <li>SIEMENS</li>
                     <li>Allen-Bradley</li>
                     <li>ABB</li>
                   </ul>
+                </li>
               </ul>
       </div>
     <!-- My Education section end -->
@@ -54,13 +57,13 @@
         <h2><span>My Hobbies</span></h2>
         <ul>
             <li>HTML <br />
-                <progress min="0" max="100" value="80"></progress>
+                <progress max="100" value="80"></progress>
             </li>
             <li>JavaScript <br />
-                <progress min="0" max="100" value="50"></progress>
+                <progress max="100" value="50"></progress>
             </li>
             <li>Unity C# <br />
-                <progress min="0" max="100" value="30"></progress>
+                <progress max="100" value="30"></progress>
             </li>
         </ul>
     </div>
@@ -68,10 +71,9 @@
     <!-- Media section start -->
     <div class="section">
         <h2><span>My Media</span></h2>
-        <iframe height="180" width="320" src="/20191214_114045.mp4"
-        allowfullscreen frameborder="0"></iframe>
-      </div>
-      </div>
+        <video src="20191214_114045.mp4" width="320" height="180" controls
+        poster = "IMG_20200918_214625_653.ico"></video>
+    </div>
     <!-- Media section end -->
     <!-- Form section start -->
       <div class="section">
@@ -89,7 +91,7 @@
         <h2><span>Follow Me</span></h2>
         <div>
           <a href="https://www.linkedin.com/in/fedenevse/" target="_blank">
-            <img alt="SoloLearn" src="linkedin_icon-icons.com_59208 (1).png" />
+            <img alt="SoloLearn" src="linkedin_icon-icons.com_59208(1).png" />
           </a>
           <a href="https://www.facebook.com/stas.fedenev" target="_blank">
             <img alt="Facebook" src="facebook_icon-icons.com_59205.png"/>
