--- a/My_Education.html
+++ b/My_Education.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>My blog</title>
+    <link  href="css/master.css" rel="stylesheet">
+    <link  href="css/master.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="shortcut icon"
     href="IMG_20200918_214625_653.ico" type="image/x-icon">
   </head>
@@ -19,6 +24,40 @@
       <!-- Higher and secondary education start -->
       <div class="section">
         <h3>Higher and secondary education</h3>
+        <div class="section">
+          <table>
+            <tr>
+              <th>the name of the educational institution and the specialty received</th>
+              <th>content</th>
+              <th>qualification and diploma</th>
+            </tr>
+            <tr>
+              <td><a href="https://agrokolledg.uralschool.ru" target="_blank">Krasnoufimsk Agricultural College</a><br>Electrification and automation of agriculture</td>
+              <td>
+                <p>Comprehensive training in the field of electrical and electrical engineering consists in the study of a number of disciplines related to the theoretical and practical development of the fundamentals of automation and mechanization of agriculture, the arrangement of power supply systems for agricultural organizations. One of the most important practical skills acquired during the training is the practice of installing, adjusting and using electrical equipment and electrical products based on agricultural production.</p>
+              </td>
+              <td>Electrical technician</td>
+            </tr>
+            <tr>
+              <td><a href="https://urfu.ru/ru" target="_blank"> Ural Federal University named after the First President of Russia B. N. Yeltsin</a><br>Energy supply of enterprises</td>
+              <td>
+                <p>The energy supply of enterprises provides for a set of tools and methods designed to develop and use installations and systems that produce, transform, distribute and consume heat, electricity and other types of energy that ensure the functioning of industrial enterprises.
+                 <br>During the study at the university, the following topics were successfully mastered:</p>
+                  <ul>
+                  <li>Design and operation of electrical equipment of stations and substations, electrical systems and power supply systems</li>
+                  <li>Protection and automation of power systems</li>
+                  <li>High-voltage electrical apparatus</li>
+                  <li>Electrical machines and transformers</li>
+                  <li>Electrotechnological equipment and electrical facilities of industrial enterprises</li>
+                  <li>Electric power industry on renewable sources</li>
+                  <li>Intelligent electrical equipment and automation of buildings and structures</li>
+                  </ul>
+              </td>
+              <td>Engineer</td>
+            </tr>
+          </table>
+
+        </div>
 
       </div>
       <!-- Higher and secondary education end -->
@@ -32,64 +71,226 @@
             <th>content</th>
             <th>certificate</th>
           </tr>
-          <tr>
+          <tr><!--MD Qualifying - Industrial Sectors and Applications-->
             <td>MD Qualifying - Industrial Sectors and Applications</td>
-            <td></td>
+            <td>
+              <ul>
+                <li>Introduction to industrial sectors</li>
+                <li>Applications in the industrial sectors
+                  <ul>
+                    <li>Energy</li>
+                    <li>Transport</li>
+                    <li>Marine</li>
+                    <li>Raw materials</li>
+                    <li>Chemical and environmental technology</li>
+                  </ul>
+                </li>
+                <li>Overview of product portfolio</li>
+              </ul>
+            </td>
             <td></td>
           </tr>
-          <tr>
+          <tr><!--Basics of Drives - Motors-->
             <td>Basics of Drives - Motors</td>
-            <td></td>
+            <td>
+              <ul>
+                <li>Synchronous motors
+                  <ul>
+                    <li>Magnetic forces</li>
+                    <li>Design of rotor and stator</li>
+                    <li>Applications</li>
+                  </ul>
+                </li>
+                <li>Asynchronous motors
+                  <ul>
+                    <li>Operating principle</li>
+                    <li>Design</li>
+                    <li>Startup on mains and on converter</li>
+                  </ul>
+                </li>
+                <li>Reluctance motors
+                  <ul>
+                    <li>Operating principle</li>
+                    <li>Design</li>
+                    <li>Applications</li>
+                  </ul>
+                </li>
+              </ul>
+            </td>
             <td></td>
           </tr>
-          <tr>
+          <tr><!--SIMARIS configuration-->
             <td>SIMARIS configuration</td>
-            <td></td>
+            <td>
+              <ul>
+                <li>Introduction</li>
+                <li>Program interface</li>
+                <li>Creating a new project</li>
+                <li>Conclusion</li>
+              </ul>
+            </td>
             <td></td>
           </tr>
-          <tr>
+          <tr><!--3TM Vacuum Contactors-->
             <td>3TM Vacuum Contactors</td>
-            <td></td>
+            <td>
+              <ul>
+                <li>3TM Characteristics</li>
+                <li>Markets and Opportunities</li>
+                <li>3TM in a Nutshell</li>
+              </ul>
+            </td>
             <td></td>
           </tr>
-          <tr>
+          <tr><!--Profinet-->
             <td>PROFINET</td>
-            <td></td>
+            <td>
+              <ul>
+                <li>Device types</li>
+                <li>Profiles</li>
+                <li>Transmission modes</li>
+                <li>Network topologies</li>
+                <li>Connection technologies</li>
+                <li>Addresses</li>
+                <li>Diagnostics</li>
+                <li>Security</li>
+              </ul>
+            </td>
             <td></td>
           </tr>
-          <tr>
+          <tr><!--Power Monitoring with SENTRON-->
             <td>Power Monitoring with SENTRON</td>
-            <td></td>
+            <td>
+              <ul>
+                <li>Introduction</li>
+                <li>Standards and SENTRON measuring devices</li>
+                <li>IT communication</li>
+                <li>Powerconfig and powermanager</li>
+                <li>Energy management in brief</li>
+              </ul>
+            </td>
             <td></td>
           </tr>
-          <tr>
+          <tr><!--Data communication with Industrial Ethernet-->
             <td>Data communication with Industrial Ethernet</td>
-            <td></td>
+            <td>
+              <ul>
+                <li>Introduction to Industrial Ethernet
+                  <ul>
+                    <li>The Ethernet standard</li>
+                    <li>What is Industrial Ethernet</li>
+                    <li>Ethernet in the automation levels</li>
+                    <li>ISO/OSI data communication model</li>
+                  </ul>
+                </li>
+                <li> Application-oriented layers
+                  <ul>
+                    <li>Application-oriented layers, based on the example of parcel shipment</li>
+                    <li>Assignment of services through ports</li>
+                    <li>Application-oriented layers in the ISO/OSI model</li>
+                  </ul>
+                </li>
+                <li>Addressing and transport of data packets
+                  <ul>
+                    <li>Transport layer</li>
+                    <li>Network layer</li>
+                  </ul>
+                </li>
+              </ul>
+            </td>
             <td></td>
           </tr>
-          <tr>
+          <tr><!--SIMATIC TIA Portal Structured Programming-->
             <td>SIMATIC TIA Portal Structured Programming</td>
-            <td></td>
+            <td>
+              <ul>
+                <li>Fundamentals of the programming
+                  <ul>
+                    <li>From the requirements to the program</li>
+                    <li>How to structure a program</li>
+                    <li>How to structure a plant identifier</li>
+                    <li>Data administration with data blocks</li>
+                  </ul>
+                </li>
+                <li>Introduction to the programming of SIMATIC S7</li>
+                <li>Introduction to the programming language FBD/LAD/STL</li>
+                <li>Introduction to the programming language SCL</li>
+                <li>Introduction to the programming language GRAPH</li>
+              </ul>
+            </td>
             <td></td>
           </tr>
-          <tr>
+          <tr><!--3VA molded case circuit breaker-->
             <td>3VA molded case circuit breaker</td>
-            <td></td>
+            <td>
+              <ul>
+                <li>Overview of the 3VA1 and 3VA2 molded case circuit breaker</li>
+                <li>Characteristics</li>
+                <li>Capabilities</li>
+                <li>Elevator Pitch (summary)</li>
+              </ul>
+            </td>
             <td></td>
           </tr>
-          <tr>
+          <tr><!--Process control engineering for beginner-->
             <td>Process control engineering for beginner</td>
-            <td></td>
+            <td>
+              <ul>
+                <li>Knowledge of the process</li>
+                <li>The automation hardware</li>
+                <li>The automation  software</li>
+                <li>Operator control and monitoring</li>
+              </ul>
+            </td>
             <td></td>
           </tr>
-          <tr>
+          <tr><!--PLCs for beginners-->
             <td>PLCs for beginners</td>
-            <td></td>
+            <td>
+              <ul>
+                <li>From relay to PLC</li>
+                <li>PLC Tasks</li>
+                <li>Basic Terms</li>
+                <li>Function Units</li>
+                <li>Software</li>
+                <li>Logic operations</li>
+                <li>Program processing</li>
+                <li>Arithmetic operations</li>
+                <li>Introduction to the programming of a PLC- FBD, STL and LAD programming</li>
+                <li>Creating a PLC program</li>
+              </ul>
+            </td>
             <td></td>
           </tr>
-          <tr>
+          <tr><!--Basics of Drives - Converters-->
             <td>Basics of Drives - Converters</td>
-            <td></td>
+            <td>
+              <ul>
+                <li>Mains and converter operation</li>
+                <li>Operation at constant and variable speed</li>
+                <li>How it works
+                  <ul>
+                    <li>Structure</li>
+                    <li>Infeed</li>
+                    <li>Power section</li>
+                    <li>Pulse width modulation</li>
+                  </ul>
+                </li>
+                <li>Energy flow
+                  <ul>
+                    <li>4-Quadrant operation</li>
+                    <li>Brake resistor</li>
+                    <li>Multiple motor system</li>
+                  </ul>
+                </li>
+                <li>Control modes
+                  <ul>
+                    <li>V/f open loop control</li>
+                    <li>Speed control</li>
+                  </ul>
+                </li>
+              </ul>
+            </td>
             <td></td>
           </tr>
         </table>
@@ -101,7 +302,7 @@
             <th>certificate</th>
           </tr>
           <tr>
-            <td>CCP146 Studio 5000 Logix Designer Level 1: ControlLogix Logix 5000 System Fundamentals</td>
+            <td>CCP146 Studio 5000 Logix Designer Level 1:<br> ControlLogix Logix 5000 System Fundamentals</td>
             <td>
               <ul>
                 <li>Locating and Identifying Logix 5000 System Components</li>
@@ -116,12 +317,12 @@
               </ul>
             </td>
             <td>
-              <p><a target="_blank" href="sert/Allen bradley/CertificatePdfServlet.pdf"><button>Sertificat</a></p>
-              <p><a href="sert/Allen bradley/CertificatePdfServlet.pdf" download><button>Dowload</a></p>
+              <p><a target="_blank" href="sert/Allen_bradley/CertificatePdfServlet.pdf">Sertificat</a></p>
+              <p><a href="sert/Allen_bradley/CertificatePdfServlet.pdf" download>Dowload</a></p>
             </td>
           </tr>
           <tr>
-            <td>CCP151 Studio 5000 Logix Designer Level 2: Basic Ladder Logic Programming</td>
+            <td>CCP151 Studio 5000 Logix Designer Level 2:<br> Basic Ladder Logic Programming</td>
             <td>
               <ul>
                 <li>Programming Comparison Instructions in a Studio 5000 Logix Designer Project</li>
@@ -134,10 +335,10 @@
                 <li>Separating the Procedure from Equipment Control in a Studio 5000 Logix Designer Project</li>
               </ul>
             </td>
-            <td></td>
+            <td><p><a target="_blank" href="sert/Allen_bradley/CertificatePdfServlet2.pdf">Sertificat</a></p></td>
           </tr>
           <tr>
-            <td>CCP143 Studio 5000 Logix Designer Level 3: Project Development</td>
+            <td>CCP143 Studio 5000 Logix Designer Level 3:<br> Project Development</td>
             <td>
               <ul>
                 <li>Configuring Logix 5000 System I/O  Modules</li>
@@ -155,7 +356,7 @@
                 <li>Identifying and Correcting Faults in a Logix 5000 System</li>
               </ul>
             </td>
-            <td></td>
+            <td><p><a target="_blank" href="sert/Allen_bradley/CertificatePdfServlet3.pdf">Sertificat</a></p></td>
           </tr>
         </table>
         <table>
