--- a/My_Main_Skills.html
+++ b/My_Main_Skills.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>My blog</title>
+    <link  href="css/master.css" rel="stylesheet">
+    <link  href="css/master.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="shortcut icon"
     href="IMG_20200918_214625_653.ico" type="image/x-icon">
   </head>
