--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>My blog</title>
+    <link  href="css/master.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="shortcut icon"
     href="IMG_20200918_214625_653.ico" type="image/x-icon">
   </head>
@@ -13,11 +17,12 @@
             <p>automation engineer</p>
         </div>
     <!-- header end -->
+    <main>
     <!-- About Me section start -->
         <div class="section">
             <h1><span>About Me</span></h1>
             <p>
-                Hey! I am <strong>Stas</strong>. Worked as an <i>automation engineer</i> on a drilling rig for 10 years. Lately I have started to study <i>C#</i> and <i>HTML</i> programming languages. In the future, I plan to completely change my type of activity and try myself in developing games on the unity engine or developing websites. I would be grateful to everyone who wants to share their experience with me or take me to my team for an internship.
+                Hey! I am Stas. Worked as an automation engineer on a drilling rig for 10 years. Lately I have started to study C# and HTML programming languages. In the future, I plan to completely change my type of activity and try myself in developing games on the unity engine or developing websites. I would be grateful to everyone who wants to share their experience with me or take me to my team for an internship.
             </p>
         </div>
     <!-- About Me section end -->
@@ -91,16 +96,17 @@
         <h2><span>Follow Me</span></h2>
         <div>
           <a href="https://www.linkedin.com/in/fedenevse/" target="_blank">
-            <img alt="SoloLearn" src="linkedin_icon-icons.com_59208(1).png" />
+            <img alt="Linkedin" src="linkedin_icon-icons.com_59208(1).png" class="PNG" />
           </a>
           <a href="https://www.facebook.com/stas.fedenev" target="_blank">
-            <img alt="Facebook" src="facebook_icon-icons.com_59205.png"/>
+            <img alt="Facebook" src="facebook_icon-icons.com_59205.png" class="PNG"/>
           </a>
-          <a href="https://twitter.com/voiceisnot" target="_blank">
-            <img alt="Twitter" src="1491579542-yumminkysocialmedia22_83078.png" />
+          <a href="https://twitter.com/voiceisnot" target="_blank" class="PNG">
+            <img alt="Twitter" src="twt.png" />
           </a>
         </div>
       </div>
+    </main>
     <!-- Contacts section end -->
 
       <div class="copyright">
